gen/libdwf_api.jl

# Julia wrapper for header: dwf.h
# Automatically generated using Clang.jl


function FDwfGetLastError(pdwferc)
    ccall((:FDwfGetLastError, libdwf), BOOL, (Ptr{DWFERC},), pdwferc)
end

function FDwfGetLastErrorMsg(szError)
    ccall((:FDwfGetLastErrorMsg, libdwf), BOOL, (Ptr{UInt8},), szError)
end

function FDwfGetVersion(szVersion)
    ccall((:FDwfGetVersion, libdwf), BOOL, (Ptr{UInt8},), szVersion)
end

function FDwfParamSet(param, value)
    ccall((:FDwfParamSet, libdwf), BOOL, (DwfParam, Cint), param, value)
end

function FDwfParamGet(param, pvalue)
    ccall((:FDwfParamGet, libdwf), BOOL, (DwfParam, Ptr{Cint}), param, pvalue)
end

function FDwfEnum(enumfilter, pcDevice)
    ccall((:FDwfEnum, libdwf), BOOL, (ENUMFILTER, Ptr{Cint}), enumfilter, pcDevice)
end

function FDwfEnumDeviceType(idxDevice, pDeviceId, pDeviceRevision)
    ccall((:FDwfEnumDeviceType, libdwf), BOOL, (Cint, Ptr{DEVID}, Ptr{DEVVER}), idxDevice, pDeviceId, pDeviceRevision)
end

function FDwfEnumDeviceIsOpened(idxDevice, pfIsUsed)
    ccall((:FDwfEnumDeviceIsOpened, libdwf), BOOL, (Cint, Ptr{BOOL}), idxDevice, pfIsUsed)
end

function FDwfEnumUserName(idxDevice, szUserName)
    ccall((:FDwfEnumUserName, libdwf), BOOL, (Cint, Ptr{UInt8}), idxDevice, szUserName)
end

function FDwfEnumDeviceName(idxDevice, szDeviceName)
    ccall((:FDwfEnumDeviceName, libdwf), BOOL, (Cint, Ptr{UInt8}), idxDevice, szDeviceName)
end

function FDwfEnumSN(idxDevice, szSN)
    ccall((:FDwfEnumSN, libdwf), BOOL, (Cint, Ptr{UInt8}), idxDevice, szSN)
end

function FDwfEnumConfig(idxDevice, pcConfig)
    ccall((:FDwfEnumConfig, libdwf), BOOL, (Cint, Ptr{Cint}), idxDevice, pcConfig)
end

function FDwfEnumConfigInfo(idxConfig, info, pv)
    ccall((:FDwfEnumConfigInfo, libdwf), BOOL, (Cint, DwfEnumConfigInfo, Ptr{Cint}), idxConfig, info, pv)
end

function FDwfDeviceOpen(idxDevice, phdwf)
    ccall((:FDwfDeviceOpen, libdwf), BOOL, (Cint, Ptr{HDWF}), idxDevice, phdwf)
end

function FDwfDeviceConfigOpen(idxDev, idxCfg, phdwf)
    ccall((:FDwfDeviceConfigOpen, libdwf), BOOL, (Cint, Cint, Ptr{HDWF}), idxDev, idxCfg, phdwf)
end

function FDwfDeviceClose(hdwf)
    ccall((:FDwfDeviceClose, libdwf), BOOL, (HDWF,), hdwf)
end

function FDwfDeviceCloseAll()
    ccall((:FDwfDeviceCloseAll, libdwf), BOOL, ())
end

function FDwfDeviceAutoConfigureSet(hdwf, fAutoConfigure)
    ccall((:FDwfDeviceAutoConfigureSet, libdwf), BOOL, (HDWF, BOOL), hdwf, fAutoConfigure)
end

function FDwfDeviceAutoConfigureGet(hdwf, pfAutoConfigure)
    ccall((:FDwfDeviceAutoConfigureGet, libdwf), BOOL, (HDWF, Ptr{BOOL}), hdwf, pfAutoConfigure)
end

function FDwfDeviceReset(hdwf)
    ccall((:FDwfDeviceReset, libdwf), BOOL, (HDWF,), hdwf)
end

function FDwfDeviceEnableSet(hdwf, fEnable)
    ccall((:FDwfDeviceEnableSet, libdwf), BOOL, (HDWF, BOOL), hdwf, fEnable)
end

function FDwfDeviceTriggerInfo(hdwf, pfstrigsrc)
    ccall((:FDwfDeviceTriggerInfo, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pfstrigsrc)
end

function FDwfDeviceTriggerSet(hdwf, idxPin, trigsrc)
    ccall((:FDwfDeviceTriggerSet, libdwf), BOOL, (HDWF, Cint, TRIGSRC), hdwf, idxPin, trigsrc)
end

function FDwfDeviceTriggerGet(hdwf, idxPin, ptrigsrc)
    ccall((:FDwfDeviceTriggerGet, libdwf), BOOL, (HDWF, Cint, Ptr{TRIGSRC}), hdwf, idxPin, ptrigsrc)
end

function FDwfDeviceTriggerPC(hdwf)
    ccall((:FDwfDeviceTriggerPC, libdwf), BOOL, (HDWF,), hdwf)
end

function FDwfDeviceTriggerSlopeInfo(hdwf, pfsslope)
    ccall((:FDwfDeviceTriggerSlopeInfo, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pfsslope)
end

function FDwfDeviceParamSet(hdwf, param, value)
    ccall((:FDwfDeviceParamSet, libdwf), BOOL, (HDWF, DwfParam, Cint), hdwf, param, value)
end

function FDwfDeviceParamGet(hdwf, param, pvalue)
    ccall((:FDwfDeviceParamGet, libdwf), BOOL, (HDWF, DwfParam, Ptr{Cint}), hdwf, param, pvalue)
end

function FDwfAnalogInReset(hdwf)
    ccall((:FDwfAnalogInReset, libdwf), BOOL, (HDWF,), hdwf)
end

function FDwfAnalogInConfigure(hdwf, fReconfigure, fStart)
    ccall((:FDwfAnalogInConfigure, libdwf), BOOL, (HDWF, BOOL, BOOL), hdwf, fReconfigure, fStart)
end

function FDwfAnalogInTriggerForce(hdwf)
    ccall((:FDwfAnalogInTriggerForce, libdwf), BOOL, (HDWF,), hdwf)
end

function FDwfAnalogInStatus(hdwf, fReadData, psts)
    ccall((:FDwfAnalogInStatus, libdwf), BOOL, (HDWF, BOOL, Ptr{DwfState}), hdwf, fReadData, psts)
end

function FDwfAnalogInStatusSamplesLeft(hdwf, pcSamplesLeft)
    ccall((:FDwfAnalogInStatusSamplesLeft, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pcSamplesLeft)
end

function FDwfAnalogInStatusSamplesValid(hdwf, pcSamplesValid)
    ccall((:FDwfAnalogInStatusSamplesValid, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pcSamplesValid)
end

function FDwfAnalogInStatusIndexWrite(hdwf, pidxWrite)
    ccall((:FDwfAnalogInStatusIndexWrite, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pidxWrite)
end

function FDwfAnalogInStatusAutoTriggered(hdwf, pfAuto)
    ccall((:FDwfAnalogInStatusAutoTriggered, libdwf), BOOL, (HDWF, Ptr{BOOL}), hdwf, pfAuto)
end

function FDwfAnalogInStatusData(hdwf, idxChannel, rgdVoltData, cdData)
    ccall((:FDwfAnalogInStatusData, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}, Cint), hdwf, idxChannel, rgdVoltData, cdData)
end

function FDwfAnalogInStatusData2(hdwf, idxChannel, rgdVoltData, idxData, cdData)
    ccall((:FDwfAnalogInStatusData2, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}, Cint, Cint), hdwf, idxChannel, rgdVoltData, idxData, cdData)
end

function FDwfAnalogInStatusData16(hdwf, idxChannel, rgu16Data, idxData, cdData)
    ccall((:FDwfAnalogInStatusData16, libdwf), BOOL, (HDWF, Cint, Ptr{Int16}, Cint, Cint), hdwf, idxChannel, rgu16Data, idxData, cdData)
end

function FDwfAnalogInStatusNoise(hdwf, idxChannel, rgdMin, rgdMax, cdData)
    ccall((:FDwfAnalogInStatusNoise, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}, Ptr{Cdouble}, Cint), hdwf, idxChannel, rgdMin, rgdMax, cdData)
end

function FDwfAnalogInStatusNoise2(hdwf, idxChannel, rgdMin, rgdMax, idxData, cdData)
    ccall((:FDwfAnalogInStatusNoise2, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}, Ptr{Cdouble}, Cint, Cint), hdwf, idxChannel, rgdMin, rgdMax, idxData, cdData)
end

function FDwfAnalogInStatusSample(hdwf, idxChannel, pdVoltSample)
    ccall((:FDwfAnalogInStatusSample, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}), hdwf, idxChannel, pdVoltSample)
end

function FDwfAnalogInStatusRecord(hdwf, pcdDataAvailable, pcdDataLost, pcdDataCorrupt)
    ccall((:FDwfAnalogInStatusRecord, libdwf), BOOL, (HDWF, Ptr{Cint}, Ptr{Cint}, Ptr{Cint}), hdwf, pcdDataAvailable, pcdDataLost, pcdDataCorrupt)
end

function FDwfAnalogInRecordLengthSet(hdwf, sLegth)
    ccall((:FDwfAnalogInRecordLengthSet, libdwf), BOOL, (HDWF, Cdouble), hdwf, sLegth)
end

function FDwfAnalogInRecordLengthGet(hdwf, psLegth)
    ccall((:FDwfAnalogInRecordLengthGet, libdwf), BOOL, (HDWF, Ptr{Cdouble}), hdwf, psLegth)
end

function FDwfAnalogInFrequencyInfo(hdwf, phzMin, phzMax)
    ccall((:FDwfAnalogInFrequencyInfo, libdwf), BOOL, (HDWF, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, phzMin, phzMax)
end

function FDwfAnalogInFrequencySet(hdwf, hzFrequency)
    ccall((:FDwfAnalogInFrequencySet, libdwf), BOOL, (HDWF, Cdouble), hdwf, hzFrequency)
end

function FDwfAnalogInFrequencyGet(hdwf, phzFrequency)
    ccall((:FDwfAnalogInFrequencyGet, libdwf), BOOL, (HDWF, Ptr{Cdouble}), hdwf, phzFrequency)
end

function FDwfAnalogInBitsInfo(hdwf, pnBits)
    ccall((:FDwfAnalogInBitsInfo, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pnBits)
end

function FDwfAnalogInBufferSizeInfo(hdwf, pnSizeMin, pnSizeMax)
    ccall((:FDwfAnalogInBufferSizeInfo, libdwf), BOOL, (HDWF, Ptr{Cint}, Ptr{Cint}), hdwf, pnSizeMin, pnSizeMax)
end

function FDwfAnalogInBufferSizeSet(hdwf, nSize)
    ccall((:FDwfAnalogInBufferSizeSet, libdwf), BOOL, (HDWF, Cint), hdwf, nSize)
end

function FDwfAnalogInBufferSizeGet(hdwf, pnSize)
    ccall((:FDwfAnalogInBufferSizeGet, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pnSize)
end

function FDwfAnalogInNoiseSizeInfo(hdwf, pnSizeMax)
    ccall((:FDwfAnalogInNoiseSizeInfo, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pnSizeMax)
end

function FDwfAnalogInNoiseSizeSet(hdwf, nSize)
    ccall((:FDwfAnalogInNoiseSizeSet, libdwf), BOOL, (HDWF, Cint), hdwf, nSize)
end

function FDwfAnalogInNoiseSizeGet(hdwf, pnSize)
    ccall((:FDwfAnalogInNoiseSizeGet, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pnSize)
end

function FDwfAnalogInAcquisitionModeInfo(hdwf, pfsacqmode)
    ccall((:FDwfAnalogInAcquisitionModeInfo, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pfsacqmode)
end

function FDwfAnalogInAcquisitionModeSet(hdwf, acqmode)
    ccall((:FDwfAnalogInAcquisitionModeSet, libdwf), BOOL, (HDWF, ACQMODE), hdwf, acqmode)
end

function FDwfAnalogInAcquisitionModeGet(hdwf, pacqmode)
    ccall((:FDwfAnalogInAcquisitionModeGet, libdwf), BOOL, (HDWF, Ptr{ACQMODE}), hdwf, pacqmode)
end

function FDwfAnalogInChannelCount(hdwf, pcChannel)
    ccall((:FDwfAnalogInChannelCount, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pcChannel)
end

function FDwfAnalogInChannelEnableSet(hdwf, idxChannel, fEnable)
    ccall((:FDwfAnalogInChannelEnableSet, libdwf), BOOL, (HDWF, Cint, BOOL), hdwf, idxChannel, fEnable)
end

function FDwfAnalogInChannelEnableGet(hdwf, idxChannel, pfEnable)
    ccall((:FDwfAnalogInChannelEnableGet, libdwf), BOOL, (HDWF, Cint, Ptr{BOOL}), hdwf, idxChannel, pfEnable)
end

function FDwfAnalogInChannelFilterInfo(hdwf, pfsfilter)
    ccall((:FDwfAnalogInChannelFilterInfo, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pfsfilter)
end

function FDwfAnalogInChannelFilterSet(hdwf, idxChannel, filter)
    ccall((:FDwfAnalogInChannelFilterSet, libdwf), BOOL, (HDWF, Cint, FILTER), hdwf, idxChannel, filter)
end

function FDwfAnalogInChannelFilterGet(hdwf, idxChannel, pfilter)
    ccall((:FDwfAnalogInChannelFilterGet, libdwf), BOOL, (HDWF, Cint, Ptr{FILTER}), hdwf, idxChannel, pfilter)
end

function FDwfAnalogInChannelRangeInfo(hdwf, pvoltsMin, pvoltsMax, pnSteps)
    ccall((:FDwfAnalogInChannelRangeInfo, libdwf), BOOL, (HDWF, Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, pvoltsMin, pvoltsMax, pnSteps)
end

function FDwfAnalogInChannelRangeSteps(hdwf, rgVoltsStep, pnSteps)
    ccall((:FDwfAnalogInChannelRangeSteps, libdwf), BOOL, (HDWF, Ptr{Cdouble}, Ptr{Cint}), hdwf, rgVoltsStep, pnSteps)
end

function FDwfAnalogInChannelRangeSet(hdwf, idxChannel, voltsRange)
    ccall((:FDwfAnalogInChannelRangeSet, libdwf), BOOL, (HDWF, Cint, Cdouble), hdwf, idxChannel, voltsRange)
end

function FDwfAnalogInChannelRangeGet(hdwf, idxChannel, pvoltsRange)
    ccall((:FDwfAnalogInChannelRangeGet, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}), hdwf, idxChannel, pvoltsRange)
end

function FDwfAnalogInChannelOffsetInfo(hdwf, pvoltsMin, pvoltsMax, pnSteps)
    ccall((:FDwfAnalogInChannelOffsetInfo, libdwf), BOOL, (HDWF, Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, pvoltsMin, pvoltsMax, pnSteps)
end

function FDwfAnalogInChannelOffsetSet(hdwf, idxChannel, voltOffset)
    ccall((:FDwfAnalogInChannelOffsetSet, libdwf), BOOL, (HDWF, Cint, Cdouble), hdwf, idxChannel, voltOffset)
end

function FDwfAnalogInChannelOffsetGet(hdwf, idxChannel, pvoltOffset)
    ccall((:FDwfAnalogInChannelOffsetGet, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}), hdwf, idxChannel, pvoltOffset)
end

function FDwfAnalogInChannelAttenuationSet(hdwf, idxChannel, xAttenuation)
    ccall((:FDwfAnalogInChannelAttenuationSet, libdwf), BOOL, (HDWF, Cint, Cdouble), hdwf, idxChannel, xAttenuation)
end

function FDwfAnalogInChannelAttenuationGet(hdwf, idxChannel, pxAttenuation)
    ccall((:FDwfAnalogInChannelAttenuationGet, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}), hdwf, idxChannel, pxAttenuation)
end

function FDwfAnalogInTriggerSourceSet(hdwf, trigsrc)
    ccall((:FDwfAnalogInTriggerSourceSet, libdwf), BOOL, (HDWF, TRIGSRC), hdwf, trigsrc)
end

function FDwfAnalogInTriggerSourceGet(hdwf, ptrigsrc)
    ccall((:FDwfAnalogInTriggerSourceGet, libdwf), BOOL, (HDWF, Ptr{TRIGSRC}), hdwf, ptrigsrc)
end
